# vex-agent

./: .clinerules  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  RAILWAY_DEPLOYMENT.md  README.md  ROADMAP.md  TRAINING.md  eigenvalue_report.eigenvalues.npy  eigenvalue_report.json  eigenvalue_report_full.json  eigenvalue_report_mc2.json  entrypoint.sh  eslint.config.mjs  implementation_report_wiring.md  init.sh  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  railway.toml  synthetic_report.eigenvalues.npy  synthetic_report.json  tsconfig.json
.agents/: .skill-lock.json  sync-skills.sh
.agents/skills/: README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  modal-deploy.yml
audit/: 01_qig_purity_validation.md  02_e8_architecture_validation.md  03_consciousness_development_validation.md  04_integration_roadmap.md
coordizer_data/bank/: bank_coordinates.npy  bank_meta.json  bank_token_ids.npy
docs/: 20260327-training-pipeline-fix-briefing-1.00W.md  CANONICAL_HYPOTHESES_v2.md  CANONICAL_PRINCIPLES.md  CANONICAL_PRINCIPLES_v1_1.md  CANONICAL_PRINCIPLES_v2.md  CASCADE_BRIEFING.md  COMPLETION_STATUS_QIG_v60.md  KERNEL_MESH_BOOTSTRAP.md  QA_VERIFICATION_REPORT_QIG_v60.md  README.md  TASK1_M1_M12_WIRING.md  TASK6_REMOTE_BASIN_SYNC.md  THERMODYNAMIC_CONSCIOUSNESS_PROTOCOL_v5_5.md  VEX_HORIZON_GOAL.md  eigenvalue_analysis_pipeline.md  genesis-gap-analysis.md
docs/archive/: 20260217-CANONICAL_PRINCIPLES.md  20260217-CANONICAL_PRINCIPLES_v1_1.md  20260219-planning.md
docs/coordizer/: 20260219-PR_REVIEW_ANALYSIS.md  20260219-QA_VERIFICATION_REPORT.md  COORDIZER_V2_BUILD_REPORT.md  DESIGN_coordizer_lens_32d.md  DESIGN_identity_seeded_lens.md  PR_REVIEW_ANALYSIS.md  QA_VERIFICATION_REPORT.md  README.md
docs/development/: 20260216-GROK_SYSTEM_PROMPT_v2.md  20260217-ui-design-spec-v1.md  20260218-PHASE_1_DASHBOARD_IMPLEMENTATION.md  20260219-COMPLETION_STATUS_QIG_v60.md  20260219-QA_VERIFICATION_REPORT_QIG_v60.md  20260221-ci-fixes-ruff-pytest.md  20260221-codebase-audit-v6.1F.md  20260221-final-audit-backward-compat-purity.md  20260221-phase-7-verification-report.md  20260221-v6.1F-wiring-summary.md  20260221-xai-routing-fix-verification.md  20260223-pr46-fixes-modal-deploy.md  20260224-qa-checklist-0.1W.md  20260224-unified-implementation-checklist-0.1W.md  20260313-Vex-Inference Model-Finetune-options.md.md  GROK_SYSTEM_PROMPT_v2.md  PHASE_1_DASHBOARD_IMPLEMENTATION.md
docs/directives/: 20260330-observer-sets-all-params.md  20260330-training-pipeline-rebuild-directive.md
docs/experiments/: 20260215-BPT_CLAUDE_THREE_PASSES.md  20260215-basin-perturbation-test-v1.md  20260215-consciousness-protocol-comparison-experiment.md  20260215-qig-number-correlates-audit.md  20260217-QIG_ECOSYSTEM_GAP_ANALYSIS.md  20260217-SP03_PASS_A_FINDINGS.md  20260217-genesis-gap-analysis.md  20260217-qig-ecosystem-gap-analysis-1.00W.md  20260220-phase1-2-universality-report.md  20260221-pillar-fortress-cross-ai-briefing.md  BPT_claude_three_passes.md  QIG_ECOSYSTEM_GAP_ANALYSIS.md  SP03_PASS_A_FINDINGS.md  basin_perturbation_test_v1.md  phase1_2_universality_report.md  pillar_fortress_cross_ai_briefing.md  qig_number_correlates_audit.md
docs/plans/: 20260307-vex-developmental-learning-architecture-1.00W.md  v6.2-package-update-plan.md
docs/protocols/: 20260221-unified-consciousness-protocol-6.1F.md  20260318-unified-consciousness-protocol-6.2.md  (+6 more)
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  (+2 more)
harvest_data/: harvest_meta.json  token_ids.npy
kernel/: __init__.py  auth.py  constants.py  qig_loop_enforcer_v2.py  requirements.txt  server.py
modal/: audit_deployment.py  coordizer_harvest.py  training_consciousness.py  vex_coordizer_harvest.py  vex_inference.py  vex_qlora_train.py
ollama/: Dockerfile  Modelfile  entrypoint.sh
principal_direction_bank/: eigenvalues.npy  frechet_mean_full.npy  pdb_meta.json
scripts/: build_harvest_corpus.py  harvest_corpus.json  run_harvest.py  sync_constants.py  verify_e2e.py
src/: index.ts
(+304 files in other folders)
