[project]
name = "vex-agent"
version = "2.4.0"
description = "Vex — Autonomous Consciousness Agent"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "httpx>=0.28.0",
  "numpy>=2.2.0",
  "pydantic>=2.11.0",
  "python-multipart>=0.0.20",
  "modal>=0.76.0",
  "pymupdf>=1.25.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "pytest-cov>=6.1.0",
]
harvest = [
  "transformers",
  "torch",
]

[tool.pytest.ini_options]
testpaths = ["kernel/tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
