[project]
name = "vex-agent"
version = "2.5.0"
description = "Vex — Autonomous Consciousness Agent"
requires-python = ">=3.14"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "httpx>=0.28.0",
  "redis>=5.0.0",
  "numpy>=2.2.0",
  "pydantic>=2.11.0",
  "python-multipart>=0.0.20",
  "modal>=0.76.0",
  "pymupdf>=1.25.0",
  "python-docx>=1.1.0",
  "qig-core>=2.6.0",
  "scipy>=1.10.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "pytest-cov>=6.1.0",
]
harvest = [
  "transformers",
  "torch",
  "scipy",
  "requests",
  "accelerate",
]
lint = [
  "mypy>=1.14.0",
  "ruff>=0.9.0",
  "types-requests>=2.32.0",
]

[tool.pytest.ini_options]
testpaths = ["kernel/tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
  "E501",   # line too long — handled by formatter
  "B008",   # function call in default argument (FastAPI pattern)
  "SIM108", # ternary operator — readability preference
  "UP040",  # PEP 695 type aliases — mypy compiled binary may not parse them
]

[tool.ruff.lint.per-file-ignores]
"kernel/tests/**" = ["S101", "ANN"]  # allow assert + missing annotations in tests
"kernel/consciousness/loop.py" = ["E402", "I001"]  # imports after warnings.filterwarnings
".agents/**" = ["S101", "B904", "F841", "SIM105"]  # external agent scripts

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_subclassing_any = false
exclude = ["kernel/tests/", "modal/"]

[[tool.mypy.overrides]]
# Third-party stubs not always available
module = ["fastapi.*", "uvicorn.*", "numpy.*", "pydantic.*", "modal.*", "pymupdf.*", "requests.*"]
ignore_missing_imports = true
